# minisom

./: .devcontainer.json  .gitignore  Dockerfile  README.md  docker-compose.yml  minisom.py  pyproject.toml  setup.py  submit_package.sh
docker/: docker-compose.yml  requirements.pip
examples/: BasicUsage.ipynb  Classification.ipynb  Clustering.ipynb  ColorQuantization.ipynb  ColorSpaceMapping.ipynb  DemocracyIndex.ipynb  FeatureSelection.ipynb  HandwrittenDigits.ipynb  HexagonalTopology.ipynb  MovieCovers.ipynb  OutliersDetection.ipynb  TimeAnalysis.ipynb  TimeSeries.ipynb  TopicModeling.ipynb  TravellingSalesmanProblem.ipynb
examples/resulting_images/: som_seed_hex.html
minisom_gpu/: functions.py  som.py
tests/: test_functions.py  test_minisom.py
