[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minisom-gpu"
version = "0.0.5"
authors = [
  { name="Rodrigo Coura Torres", email="torres.rc@gmail.com" },
]
description = 'Minimalistic implementation of the Self Organizing Maps (SOM) employing GPU.'
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rctorres/minisom"
"Bug Tracker" = "https://github.com/rctorres/minisom/issues"
